--- a/helloworld-js/package.json
+++ b/helloworld-js/package.json
@@ -1,18 +1,19 @@
 {
     "name": "helloworld",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "Hello, world!",
     "repository": {
         "type": "git",
         "url": "https://github.com/jharmison-redhat/containers-for-embedded-ws.git",
         "directory": "helloworld-js"
     },
-    "main": "lib/index.js",
+    "main": "lib/server.js",
     "license": "BSD-2-Clause",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node bin.js"
     },
     "bin": {
-        "helloworld": "./bin.js"
+        "hello-world": "./bin.js"
     }
 }
